Bug 455173 - The Plasma sliding popups effect has a white flash in animation, with dark themes.
Summary: The Plasma sliding popups effect has a white flash in animation, with dark th...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-various (other bugs)
Version First Reported In: 5.24.90
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-06-12 05:10 UTC by Jin Liu
Modified: 2024-02-02 16:53 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0
Sentry Crash Report:


Attachments
Screencast of the bug (1.28 MB, video/x-matroska)
2022-06-12 05:10 UTC, Jin Liu
Details
animation screenshot, early (355.92 KB, image/jpeg)
2022-06-12 05:11 UTC, Jin Liu
Details
animation screenshot, middle (334.40 KB, image/jpeg)
2022-06-12 05:11 UTC, Jin Liu
Details
animation screenshot, end (335.30 KB, image/jpeg)
2022-06-12 05:11 UTC, Jin Liu
Details
screenshot, plasma popup, no window behind (539.25 KB, image/jpeg)
2022-06-12 05:12 UTC, Jin Liu
Details
screenshot, plasma popup, window behind (518.01 KB, image/jpeg)
2022-06-12 05:12 UTC, Jin Liu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jin Liu 2022-06-12 05:10:04 UTC
SUMMARY
With a dark global theme, the systray's sliding out animation has a quite visible white flash. (see attachment1 [details])
In attachment2 [details],3,4 you can see that the popup is significantly brighter at the start of animation than the end, causing the flash.
It's actually caused by the "Improve contrast and readability behind semi-transparent windows" effect. When this effect is off, no more flash in the sliding out animation.
Moreover, this effect makes all Plasma panels significantly brighter when there's a window behind, compared to when no window behind, or when the effect is off. (see attachment5 [details],6)

STEPS TO REPRODUCE
1. Click on a systray icon

OBSERVED RESULT
The popup's sliding out animation has a white flash. 

EXPECTED RESULT
The popup's sliding out animation has no flash.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.24.90
KDE Frameworks Version: 5.94.0
Qt Version: 5.15.4
Comment 1 Jin Liu 2022-06-12 05:10:42 UTC
Created attachment 149629 [details]
Screencast of the bug
Comment 2 Jin Liu 2022-06-12 05:11:07 UTC
Created attachment 149630 [details]
animation screenshot, early
Comment 3 Jin Liu 2022-06-12 05:11:26 UTC
Created attachment 149631 [details]
animation screenshot, middle
Comment 4 Jin Liu 2022-06-12 05:11:45 UTC
Created attachment 149632 [details]
animation screenshot, end
Comment 5 Jin Liu 2022-06-12 05:12:20 UTC
Created attachment 149633 [details]
screenshot, plasma popup, no window behind
Comment 6 Jin Liu 2022-06-12 05:12:42 UTC
Created attachment 149634 [details]
screenshot, plasma popup, window behind
Comment 7 Nate Graham 2022-06-14 16:08:19 UTC
Can confirm.
Comment 8 Nate Graham 2024-01-30 23:15:07 UTC
*** Bug 480568 has been marked as a duplicate of this bug. ***
Comment 9 Bug Janitor Service 2024-02-02 13:08:02 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/libplasma/-/merge_requests/1044
Comment 10 Nate Graham 2024-02-02 16:49:43 UTC
Git commit 0e53a6db4077bfc0f783ac5830de29b39adb8f33 by Nate Graham, on behalf of Niccolò Venerandi.
Committed on 02/02/2024 at 16:49.
Pushed by ngraham into branch 'master'.

Use different intensity values for light and dark Breeze themes

Currently, a positive brightness value is set in the Breeze theme regardless
of the colorscheme. Instead, let's use the colorscheme-dependent fallback and
update its values to be closer to the ones used in Breeze.
Related: bug 480548
FIXED-IN: 6.0

M  +3    -3    src/desktoptheme/breeze-dark/plasmarc
M  +0    -1    src/desktoptheme/breeze/plasmarc
M  +2    -2    src/plasma/theme.cpp
M  +1    -0    src/plasmaquick/CMakeLists.txt

https://invent.kde.org/plasma/libplasma/-/commit/0e53a6db4077bfc0f783ac5830de29b39adb8f33
Comment 11 Nate Graham 2024-02-02 16:53:28 UTC
Git commit 33962080de14c8a2ef0cee838bec55f2f34e52d0 by Nate Graham, on behalf of Niccolò Venerandi.
Committed on 02/02/2024 at 16:50.
Pushed by ngraham into branch 'Plasma/6.0'.

Use different intensity values for light and dark Breeze themes

Currently, a positive brightness value is set in the Breeze theme regardless
of the colorscheme. Instead, let's use the colorscheme-dependent fallback and
update its values to be closer to the ones used in Breeze.
Related: bug 480548
FIXED-IN: 6.0


(cherry picked from commit 0e53a6db4077bfc0f783ac5830de29b39adb8f33)

M  +3    -3    src/desktoptheme/breeze-dark/plasmarc
M  +0    -1    src/desktoptheme/breeze/plasmarc
M  +2    -2    src/plasma/theme.cpp
M  +1    -0    src/plasmaquick/CMakeLists.txt

https://invent.kde.org/plasma/libplasma/-/commit/33962080de14c8a2ef0cee838bec55f2f34e52d0