Use different intensity values for light and dark Breeze themes

Currently, a positive brightness value is set in the Breeze theme regardless
of the colorscheme. Instead, let's use the colorscheme-dependent fallback and
update its values to be closer to the ones used in Breeze.

BUG: 455173
CCBUG: 480548
FIXED-IN: 6.0


(cherry picked from commit 0e53a6db4077bfc0f783ac5830de29b39adb8f33)